<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragment.CommunityFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:alpha="1"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 标题栏 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:paddingHorizontal="@dimen/spacing_large"
            android:paddingVertical="@dimen/spacing_medium">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search"
                app:tint="@color/primary"
                android:background="@color/background"
                app:layout_constraintEnd_toStartOf="@+id/btnNotification"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/btnNotification"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/notifications"
                android:src="@drawable/ic_bell"
                app:tint="@color/primary"
                android:background="@color/background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 分类标签 -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:background="@color/transparent"
            android:paddingVertical="@dimen/spacing_medium"
            android:paddingHorizontal="@dimen/spacing_large">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:chipSpacingHorizontal="@dimen/spacing_medium">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAll"
                    style="@style/widget_home_chip_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipRecommended"
                    style="@style/widget_home_chip_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFollowing"
                    style="@style/widget_home_chip_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipHot"
                    style="@style/widget_home_chip_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLatest"
                    style="@style/widget_home_chip_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_post" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:contentDescription="@string/create_post"
        android:src="@drawable/ic_pen"
        app:backgroundTint="@color/primary"
        app:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>